<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        >

    <Button
        android:id="@+id/hw_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw1"
        android:background="@drawable/button_selector"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/hw_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hw2"
        android:background="@drawable/button_selector"
        android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw3"
            android:background="@drawable/button_selector"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw4"
            android:background="@drawable/button_selector"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw5"
            android:background="@drawable/button_selector"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw6"
            android:background="@drawable/button_selector"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw7"
            android:background="@drawable/button_selector"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw8"
            android:background="@drawable/button_selector"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/hw_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hw9"
            android:background="@drawable/button_selector"
            android:layout_margin="5dp"/>
    </LinearLayout>

</ScrollView>