<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/button1" />

    <TextView
        android:id="@+id/textView"
        android:background="#7bede6"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="@string/text_view_1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:background="#c292f5"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/text_view_2"
        android:textSize="18sp" />
</LinearLayout>